@@ -1,3 +1,7 @@
+2003-03-31  MINAMI Hirokazu  <minami@mistfall.net>
+
+	* xwindow/x_imagelib_gdk.c: minor code cleanup.
+
 2003-03-30 Araki Ken <arakiken@users.sf.net>
 
 	* Added "georgian-ps" and "koi8-t" encodings.
